[package]
name = "gwsprint"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oracle = { version = "0.5", features = ["chrono"] }
r2d2 = "0.8"
r2d2-oracle = "0.5"
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"
futures = "0.3"
